--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -3,6 +3,8 @@
     <div class="data-panel">
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
       </bd-button>
+      <ngx-datatable #datatable class="material striped" [rows]="items" [columns]="columns" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [selectionType]="'single'" (select)="onSelect($event)" [limit]="10">
+      </ngx-datatable>
     </div>
   </first-pane>
   <second-pane>
