file-preview styles refactoring

--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
@@ -10,7 +10,7 @@
         </span>
         <button class="btn-delete"
                 (click)="onRemoveClick($event)">
-          <i class="fa fa-minus-circle"></i>
+          <i class="icon-minus"></i>
         </button>
     </div>
       <bd-input
