--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/font-icons';
 
 .loaded-file-container {
   position: relative;
@@ -24,8 +25,8 @@
 
     .file-type-container {
       display: flex;
-      height: 50px;
-      padding: 0 17px;
+      height: $form-control-height;
+      padding: 0 $default-margin;
       border-bottom: $border;
       align-items: center;
       justify-content: space-between;
