--- a/src/app/forms/dropoffs-form/dropoffs-form.component.html
+++ b/src/app/forms/dropoffs-form/dropoffs-form.component.html
@@ -1,4 +1,4 @@
-<template let-data ngFor [ngForOf]="renderFormData" let-i="index">
+<template let-data ngFor [ngForOf]="renderFormData" let-i="index" [ngForTrackBy]="trackBy">
   <bd-remove-button class='bd-form-control' (click)='removeItem(data)' [prefixLabel]="label(i)"> </bd-remove-button>
   <dropoff-form [group]="data.group" [stop]="data.item" [viewMode]="viewMode"></dropoff-form>
 </template>
