--- a/src/app/customers/components/customer-card/customer-card.component.scss
+++ b/src/app/customers/components/customer-card/customer-card.component.scss
@@ -55,7 +55,7 @@
       overflow: hidden;
       align-items: flex-end;
       font-weight: bold;
-      padding-left: 17px;
+      padding-left: $default-margin;
     }
 
     .right {
@@ -98,7 +98,7 @@
 
     .middle {
       overflow: hidden;
-      padding-left: 17px;
+      padding-left: $default-margin;
 
       .position {
         overflow: hidden;
@@ -108,7 +108,7 @@
     }
 
     .right {
-      span {
+      .status {
         display: flex;
         width: 79px;
         height: 20px;
