remove using file upload service from preview component

--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
@@ -1,5 +1,6 @@
 <div class="loaded-file-container">
   <div
+    *ngIf="newDocument"
     class="upload-progress"
     [style.width.%]="uploadProgress">
   </div>
