add file upload service to load document form, add async-pipe to stream progress into preview

--- a/src/app/forms/load-document-form/load-document-form.component.html
+++ b/src/app/forms/load-document-form/load-document-form.component.html
@@ -5,6 +5,7 @@
     [itemIndex]="i + 1"
     [newDocument]="document.newDocument"
     [document]="document.file"
+    [progress]="document.progress | async"
     (removeFile)="onRemoveFile(document)">
   </bd-file-preview>
 </div>
