add error handling

--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
@@ -21,4 +21,9 @@
   </div>
   <div class="file-preview">
   </div>
+  <div *ngIf="uploadFailed"
+    class="error">
+    <i class="icon-warning"></i>
+    <span>Error! File upload failed!</span>
+  </div>
 </div>
