--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   background: $white;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   flex-direction: row;
 
   .upload-progress {
@@ -55,5 +55,35 @@
     background: $iron;
     border-top-right-radius: $default-border-radius;
     border-bottom-right-radius: $default-border-radius;
+  }
+
+  .error {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    padding: 0 $default-margin;
+    bottom: -22px;
+    align-items: center;
+
+    i {
+      color: $label-warning-color;
+      margin-right: 15px;
+    }
+
+    span {
+      color: $label-warning-color;
+    }
+
+    &:before {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      content: '';
+      opacity: .3;
+      background-color: $label-warning-color;
+    }
   }
 }
