--- a/src/app/multi-pane-layout/multi-pane-layout.component.html
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.html
@@ -1,31 +1,33 @@
 <div class="main-area">
-    <bd-resize-container #firstPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
+    <bd-resize-container #firstPane [width]="panesWidth[0]" [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
         <div class="panel" *ngIf="isVisible(switchStateEnum.FirstPaneVisible)">
             <ng-content select="first-pane"></ng-content>
         </div>
     </bd-resize-container>
     <bd-resizer
         *ngIf="isVisible(switchStateEnum.FirstPaneVisible) && resizeSecondPane"
+        (change)="onResizerChange()"
         [resizer]="resizerDirection"
   		[resizerWidth]="resizerWidth" 
   		[resizerFirst]="firstPane" 
   		[resizerSecond]="resizeSecondPane"
   		[resizerMin]="resizerMin">
     </bd-resizer>
-    <bd-resize-container #secondPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
+    <bd-resize-container #secondPane [width]="panesWidth[1]" [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
         <div class="panel" *ngIf="isVisible(switchStateEnum.SecondPaneVisible)">
             <ng-content select="second-pane"></ng-content>
         </div>
     </bd-resize-container>
     <bd-resizer
         *ngIf="isVisible(switchStateEnum.SecondPaneVisible) && isVisible(switchStateEnum.ThirdPaneVisible)"
+        (change)="onResizerChange()"
         [resizer]="resizerDirection"
   		[resizerWidth]="resizerWidth" 
   		[resizerFirst]="secondPane" 
   		[resizerSecond]="thirdPane"
   		[resizerMin]="resizerMin">
     </bd-resizer>
-    <bd-resize-container #thirdPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
+    <bd-resize-container #thirdPane [width]="panesWidth[2]" [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
         <div class="panel" *ngIf="isVisible(switchStateEnum.ThirdPaneVisible)">
             <ng-content select="third-pane"></ng-content>
         </div>
