--- a/src/app/forms/load-document-form/load-document-form.component.html
+++ b/src/app/forms/load-document-form/load-document-form.component.html
@@ -1,9 +1,9 @@
 <div class="preview-container">
   <bd-file-preview
      *ngFor="let document of this.documents; let i = index;"
-    [documentType]="document.type"
+    [documentType]="document.item.type"
     [itemIndex]="i + 1"
-    [document]="document.file"
+    [document]="document.item.file"
     [progress]="document.progress | async"
     (removeFile)="onRemoveFile(document)">
   </bd-file-preview>
