--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -42,3 +42,11 @@ layout-switch {
   position: absolute;
   bottom: 0;
 }
+.parent-test{
+  position:relative;
+  width: calc(100vw - 130px);
+  top: 0; right: 0; height:40px; background:green;
+  .test {
+    position: fixed; right:55px; top:5px; background: red; height:30px; width:30px;
+  }
+}
