add some functionality, refactoring

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -8,12 +8,11 @@
 
     <layout-switch [switchState]="switchState" (switchStateChange)="onSwitchStateChange($event)"></layout-switch>
 </div>
-<div class="parent-test" >
+<div class="parent-test">
   <span [bd-popover]="notifyPopover"
         [popoverOnHover]="true"
-        class="test"
-        >
-    testetstetstest
+        class="test">
+    testtesttesttesttest
     <bd-popover-content
       #notifyPopover
       placement="auto"
