--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,15 @@ navigation-bar {
   }
 }
 
+top-panel {
+  display: flex;
+  width: 100%;
+  height: $form-control-height;
+  background: $white;
+  align-items: center;
+  border-bottom: $border;
+}
+
 main {
   width: 100%;
   height: 100vh;
