--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -1,17 +1,14 @@
 //sass-lint:disable no-important no-vendor-prefixes no-duplicate-properties no-unknown-properties
 @font-face {
   font-family: 'icon';
-  src:  url('./assets/fonts/font-icons/icon.eot?yk6m6j');
-  src:  url('./assets/fonts/font-icons/icon.eot?yk6m6j#iefix') format('embedded-opentype'),
-  url('./assets/fonts/font-icons/icon.ttf?yk6m6j') format('truetype'),
-  url('./assets/fonts/font-icons/icon.woff?yk6m6j') format('woff'),
-  url('./assets/fonts/font-icons/icon.svg?yk6m6j#icon') format('svg');
+  src: url('./assets/fonts/font-icons/icon.eot?yk6m6j');
+  src: url('./assets/fonts/font-icons/icon.eot?yk6m6j#iefix') format('embedded-opentype'), url('./assets/fonts/font-icons/icon.ttf?yk6m6j') format('truetype'), url('./assets/fonts/font-icons/icon.woff?yk6m6j') format('woff'), url('./assets/fonts/font-icons/icon.svg?yk6m6j#icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^='icon-'],
-[class*=' icon-'] {
+[class*=' icon-'],
+[class^='icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icon' !important;
   line-height: 1;
@@ -20,12 +17,10 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 //sass-lint:enable no-important no-vendor-prefixes no-duplicate-properties no-unknown-properties
 
 .icon-plus {
@@ -109,5 +104,29 @@
 .icon-pickup {
   &:before {
     content: '\e90d';
+  }
+}
+
+.icon-user {
+  &:before {
+    content: '\e90e';
+  }
+}
+
+.icon-notifications {
+  &:before {
+    content: '\e90f';
+  }
+}
+
+.icon-messages {
+  &:before {
+    content: '\e910';
+  }
+}
+
+.icon-tasks {
+  &:before {
+    content: '\e911';
   }
 }
