--- a/src/app/multi-pane-layout/multi-pane-layout.component.scss
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.scss
@@ -2,13 +2,13 @@
   display: flex;
   overflow: hidden;
   height: 100%;
-  padding: 20px 20px 0;
+  padding: 20px;
 }
 
 .panel {
-  height: calc(100vh - 40px);
+  height: 100%;
   border: 0;
-  margin: 0 0 20px;
+  margin: 0;
   background: transparent;
   overflow-y: auto;
 }
