--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,6 +47,10 @@ top-panel {
   border-bottom: $border;
 }
 
+.main-content {
+  height: calc(100% - $form-control-height);
+}
+
 main {
   width: 100%;
   height: 100vh;
