--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,7 @@ app {
 /*page layout start*/
 navigation-bar {
   position: relative;
+  z-index: 1;
   display: inline-block;
   width: 160px;
   height: 100vh;
@@ -39,6 +40,7 @@ navigation-bar {
 }
 
 main {
+  z-index: 0;
   width: 100%;
   height: 100vh;
   margin-left: -20px;
