add notification popup to shared module

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -12,13 +12,16 @@
   <span [bd-popover]="notifyPopover"
         [popoverOnHover]="true"
         class="test">
-    testtesttesttesttest
+    <i class="icon-down-arrow"></i>
     <bd-popover-content
       #notifyPopover
       placement="auto"
-      [width]="220"
+      [horizontalOffset]="-10"
       [closeOnClickOutside]="false">
-      test
+      <bd-notification-popover
+        [headerTitleText]="'Latest notifications'"
+        [newItemsCount]="4">
+      </bd-notification-popover>
     </bd-popover-content>
   </span>
 </div>
