--- a/src/app/notifications/notification-popover.component.scss
+++ b/src/app/notifications/notification-popover.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/styles/variables';
+@import '../../assets/styles/variables';
 
 .notifications-container {
   padding: 0 15px;
