--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -52,10 +52,5 @@ layout-switch {
   right: 0;
   height:40px;
   background:green;
-  .test {
-     margin-right:55px;
-     background: red;
-     height:30px;
-     width:30px;
-  }
+  padding-right: 40px;
 }
