--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -28,7 +28,7 @@ input {
     position: relative;
     display: flex;
     width: 57px;
-    height: 50px;
+    height: $form-control-height;
     cursor: pointer;
     justify-content: center;
     align-items: center;
