FSPA-243 #comment  code refactoring

--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -27,6 +27,7 @@ input {
   span {
     position: relative;
     display: flex;
+    overflow: hidden;
     width: 57px;
     height: $form-control-height;
     cursor: pointer;
