--- a/src/app/top-panel/components/icon-with-count-indicator/icon-with-count-indicator.component.scss
+++ b/src/app/top-panel/components/icon-with-count-indicator/icon-with-count-indicator.component.scss
@@ -5,7 +5,7 @@ i {
   font-size: 19px;
 }
 
-%digit-number {
+.digit-number {
   position: absolute;
   top: 5px;
   height: 20px;
@@ -14,23 +14,8 @@ i {
   color: $white;
   font-size: 10px;
   text-align: center;
+  left: 28px;
   border-radius: 50px;
-}
-
-.digit-number-1 {
-  @extend %digit-number;
-  right: 7px;
-  width: 20px;
-}
-
-.digit-number-2 {
-  @extend %digit-number;
-  right: 5px;
-  width: 24px;
-}
-
-.digit-number-3 {
-  @extend %digit-number;
-  right: 0;
-  width: 30px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
