add message popover component to template

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -12,6 +12,11 @@
   <bd-notification-popover
     [headerTitleText]="'Latest things'"
     [newItemsCount]="5"
-    [width]="300"
-  ></bd-notification-popover>
+    [width]="300">
+      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+</bd-notification-popover>
 </div>
