refactoring message notification template component

--- a/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.html
+++ b/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.html
@@ -6,7 +6,7 @@
     </bd-initials-circle>
   </div>
   <div class="content-container">
-    <div class="message-sender">{{user.firstName}} {{user.lastName}}</div>
+    <div class="message-sender">{{firstName}} {{lastName}}</div>
     <div class="message-text">
       {{message}}
     </div>
