--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,4 +43,11 @@ main {
   height: 100vh;
   margin-left: -20px;
 }
+
+bd-toast-manager {
+  position: absolute;
+  width: 200px;
+  bottom: 20px;
+  margin-left: 20px;
+}
 /*page layout end*/
