refactoring: add z-indexes to variables.scss

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -73,3 +73,5 @@ $popover-margin: 15px;
 /* zIndexes */
 $sticked-z-index: 100;
 $form-control-popup-z-index: 10;
+$high-level-z-index: 1;
+$low-level-z-index: 0;
