--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@ app {
 /*page layout start*/
 navigation-bar {
   position: relative;
-  z-index: 1;
+  z-index: $high-level-z-index;
   display: inline-block;
   width: 160px;
   height: 100vh;
@@ -53,7 +53,7 @@ top-panel {
 }
 
 main {
-  z-index: 0;
+  z-index: $low-level-z-index;
   width: 100%;
   height: 100vh;
   margin-left: -20px;
