handling different count of notification, add new width of base notification, refactoring

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -21,7 +21,7 @@
               <div *ngIf="itemsCount > 0"
                   class="new-items-info" >
                   <span class="new-items-count">
-                    {{itemsCount}} new items -
+                    {{itemsCount}} new {{_itemsName}} -
                   </span>
                   <button class="btn-refresh" (click)="onRefreshClick($event)">
                     Refresh
