--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -1,4 +1,4 @@
-<div class="notification-container">
+<div class="base-notification-container">
   <div [bd-popover]="notifyPopover"
        [popoverOnHover]="true"
         class="popover-target">
