--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.scss
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.scss
@@ -3,7 +3,7 @@
 
 $popover-item-size: 40px;
 
-.notification-container {
+.base-notification-container {
   .popover-target {
     /deep/ .popover {
       padding: 0;
