FSPA-247 #comment created notification item component,  markup, created enums for event type, priority, code refactoring, fixed issue with message text

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,7 +48,7 @@ top-panel {
 }
 
 .main-content {
-  height: calc(100% - $form-control-height);
+  height: calc(100% - #{$form-control-height});
 }
 
 main {
