FSPA-247 #comment added multi line mixin, lint err

--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -10,7 +10,7 @@
     [notificationType]="'tasks'">
       <task-notification-card [message]="'my message 1'" [priority]="0" [date]="'current date 1'" [eventType]="1" [name]="'Add Load Commodity name 1'"></task-notification-card>
       <task-notification-card [message]="'my message 2'" [priority]="1" [date]="'current date 2'" [eventType]="2" [name]="'Add Load Commodity name 2'"></task-notification-card>
-      <task-notification-card [message]="'my message 3'" [priority]="2" [date]="'current date 3'" [eventType]="3" [name]="'Add Load Commodity name 3'"></task-notification-card>
+      <task-notification-card [message]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation'" [priority]="2" [date]="'current date 3'" [eventType]="3" [name]="'Add Load Commodity name 3'"></task-notification-card>
       <task-notification-card [message]="'my message 4'" [priority]="1" [date]="'current date 4'" [eventType]="4" [name]="'Add Load Commodity name 4'"></task-notification-card>
       <task-notification-card [message]="'my message 5'" [priority]="0" [date]="'current date 5'" [eventType]="1" [name]="'Add Load Commodity name 5'"></task-notification-card>
 </bd-notification-popover>
