--- a/src/app/task-notification-card/task-notification-card.component.scss
+++ b/src/app/task-notification-card/task-notification-card.component.scss
@@ -1,5 +1,34 @@
 @import '../../assets/styles/variables';
 @import '../../assets/styles/font-icons';
+/* mixin for multiline */
+@mixin multi-line-ellipsis($line-height: 1.2, $line-count: 2) {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  background: $white;
+  line-height: $line-height;
+  text-align: justify;
+  max-height: $line-height * $line-count;
+  margin-top: 12px;
+  word-break: break-word;
+
+  &:before {
+    position: absolute;
+    right: 0;
+    background: inherit;
+    content: '...';
+    bottom: 0;
+  }
+
+  &:after {
+    position: absolute;
+    right: 0;
+    width: 1em;
+    height: 1em;
+    content: '';
+    margin-top: .2em;
+  }
+}
 
 .task-notification-container {
   display: flex;
@@ -43,17 +72,9 @@
       line-height: 1;
     }
 
-    //sass-lint:disable  no-vendor-prefixes
     .message {
-      display: -webkit-box;
-      overflow: hidden;
-      line-height: 1.2;
-      margin-top: 12px;
-      text-overflow: ellipsis;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+      @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
     }
-    //sass-lint:enable  no-vendor-prefixes
 
     .name {
       font-weight: bold;
