FSPA-247 #comment relocate multi line ellipsis, fixed issue with ellipsis on hover

--- a/src/app/task-notification-card/task-notification-card.component.scss
+++ b/src/app/task-notification-card/task-notification-card.component.scss
@@ -1,34 +1,7 @@
 @import '../../assets/styles/variables';
+@import '../../assets/styles/mixins/multi-line-ellipsis';
 @import '../../assets/styles/font-icons';
-/* mixin for multiline */
-@mixin multi-line-ellipsis($line-height: 1.2, $line-count: 2) {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  background: $white;
-  line-height: $line-height;
-  text-align: justify;
-  max-height: $line-height * $line-count;
-  margin-top: 12px;
-  word-break: break-word;
 
-  &:before {
-    position: absolute;
-    right: 0;
-    background: inherit;
-    content: '...';
-    bottom: 0;
-  }
-
-  &:after {
-    position: absolute;
-    right: 0;
-    width: 1em;
-    height: 1em;
-    content: '';
-    margin-top: .2em;
-  }
-}
 
 .task-notification-container {
   display: flex;
@@ -38,10 +11,6 @@
   background: $white;
   font-size: $tiny-font-size;
   border-bottom: $border;
-
-  &:hover {
-    background: $light-blue;
-  }
 
   .notification-icon {
     width: 35px;
@@ -83,6 +52,20 @@
     .date {
       color: $grey;
       margin-top: 12px;
+    }
+  }
+
+  &:hover {
+    background: $light-blue;
+
+    .notification-content {
+      .message {
+        background: $light-blue;
+
+        &:after {
+          background: $light-blue;
+        }
+      }
     }
   }
 }
