create bd-time-ago component

--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -8,31 +8,31 @@
     [itemsCount]="5888"
     [width]="400"
     [notificationType]="'tasks'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'" [date]="date2"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'" [date]="date3"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+      <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
 </bd-notification-popover>
 <bd-notification-popover
     [itemsCount]="1"
     [width]="400"
     [notificationType]="'messages'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date2"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date3"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
 </bd-notification-popover>
 <bd-notification-popover
     [itemsCount]="5"
     [width]="400"
     [notificationType]="'notifications'">
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
-      <message-notification [user]="testUser" [message]="'test message'"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date2"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date3"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
+    <message-notification [user]="testUser" [message]="'test message'" [date]="date1"></message-notification>
 </bd-notification-popover>
 
   <span>
