--- a/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.html
+++ b/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.html
@@ -11,7 +11,7 @@
       {{message}}
     </div>
     <div class="message-date">
-      {{date}}
+      <bd-time-ago [eventDate]="date"></bd-time-ago>
     </div>
   </div>
 </div>
