fi notification popover placement

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.html
@@ -6,7 +6,7 @@
           </icon-with-count-indicator>
     <bd-popover-content
       #notifyPopover
-      placement="auto"
+      placement="bottom"
       [horizontalOffset]="-10"
       [closeOnClickOutside]="false"
       [width]="width"
