fix notification base popover styles

--- a/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.scss
+++ b/src/app/shared/components/bd-notification-popover/components/message-notification/message-notification.component.scss
@@ -8,11 +8,12 @@
   border-bottom: $border;
 
   .circle-container {
-    width: 20%;
+    width: auto;
+    margin-right: $popover-margin;
   }
 
   .content-container {
-    width: 80%;
+    flex-grow: 1;
 
     .message-sender {
       font-weight: bold;
