styles refactoring: remove outline from button focus state

--- a/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.scss
+++ b/src/app/shared/components/bd-notification-popover/bd-notification-popover.component.scss
@@ -24,6 +24,10 @@ $popover-item-size: 40px;
       border: 0;
       background: transparent;
       color: $blue;
+
+      &:focus {
+        outline: 0;
+      }
     }
 
     .notifications-header {
